--- a/package.json
+++ b/package.json
@@ -1,55 +1,39 @@
 {
-  "name": "vk-miniapps-template",
+  "name": "mini-app",
   "version": "1.0.0",
-  "description": "simple vk-miniapp",
+  "description": "",
   "homepage": "./",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --debug src/",
-    "lint:write": "eslint --debug src/ --fix",
+    "gitdeploy": "gh-pages -d build",
+    "m": "vk-miniapps-deploy",
+    "deploy": "vk-miniapps-deploy",
     "start": "cross-env PORT=8080 react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "set \"GENERATE_SOURCEMAP=false\" npm run build",
-    "ghdeploy": "gh-pages -d build",
-    "deploy": "vk-miniapps-deploy"
+    "predeploy": "npm run build",
+    "ssl": "ssh -R 80:localhost:8080 ssh.localhost.run"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-jest-enzyme": "^6.0.2",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jest": "^21.18.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.9.1",
-    "husky": "^1.1.2",
-    "lint-staged": "^7.3.0",
-    "prettier": "^1.14.3",
-    "cross-env": "^5.2.0",
-    "react-hot-loader": "^4.9.0",
+    "@vkontakte/vk-miniapps-deploy": "^0.0.11",
+    "cross-env": "^5.2.1",
+    "gh-pages": "^2.2.0",
+    "react-hot-loader": "^4.12.19",
     "react-scripts": "^3.4.1"
   },
   "dependencies": {
-    "@vkontakte/eslint-config": "^2.1.0",
-    "@vkontakte/icons": "^1.18.2",
-    "@vkontakte/vk-bridge": "^2.1.8",
-    "@vkontakte/vk-miniapps-deploy": "0.0.17",
-    "@vkontakte/vkui": "^3.5.0",
+    "@vkontakte/icons": "^1.20.2",
+    "@vkontakte/vk-bridge": "^2.2.0",
+    "@vkontakte/vkui": "^3.5.4",
     "axios": "^0.19.2",
-    "babel-eslint": "^10.1.0",
     "chalk": "^2.4.2",
-    "core-js": "^3.6.4",
-    "eruda": "^2.2.0",
-    "eruda-code": "^2.0.0",
-    "eruda-dom": "^2.0.0",
+    "core-js": "^3.6.5",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-roulette": "0.0.1"
   },
   "browserslist": {
     "production": [
