--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.19.2",
     "chalk": "^2.4.2",
     "core-js": "^3.6.5",
+    "eslint": "^6.8.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
