--- a/package.json
+++ b/package.json
@@ -17,23 +17,24 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@vkontakte/vk-miniapps-deploy": "^0.0.11",
+    "@vkontakte/vk-miniapps-deploy": "^0.0.25",
     "cross-env": "^5.2.1",
-    "gh-pages": "^2.2.0",
-    "react-hot-loader": "^4.12.19",
-    "react-scripts": "^3.4.1"
+    "gh-pages": "^3.1.0",
+    "react-hot-loader": "^4.13.0",
+    "react-scripts": "^3.4.4"
   },
   "dependencies": {
-    "@vkontakte/icons": "^1.20.2",
-    "@vkontakte/vk-bridge": "^2.2.0",
-    "@vkontakte/vkui": "^3.5.4",
-    "axios": "^0.19.2",
+    "@vkontakte/icons": "^1.91.0",
+    "@vkontakte/vk-bridge": "^2.4.1",
+    "@vkontakte/vkjs": "^0.21.0",
+    "@vkontakte/vkui": "^4.5.0",
+    "axios": "^0.21.1",
     "chalk": "^2.4.2",
-    "core-js": "^3.6.5",
+    "core-js": "^3.10.1",
     "eslint": "^6.8.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-roulette": "0.0.1"
   },
   "browserslist": {
